Disable picom for now.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,5 +193,5 @@ bar {
 # Emoji picker
 exec --no-startup-id bash -c "cd /home/rick/workspace/Emote && pipenv run start"
 exec --no-startup-id imwheel
-exec --no-startup-id picom -b
+#exec --no-startup-id picom -b
 
