--- a/.config/i3/config
+++ b/.config/i3/config
@@ -135,7 +135,7 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 bindsym $mod+less workspace next
-bindsym $mod+Shift+less workspace previous
+bindsym $mod+Shift+less workspace prev
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
