--- a/.config/i3/config
+++ b/.config/i3/config
@@ -99,7 +99,7 @@ bindsym $mod+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 bindsym Control+Shift+space exec ibus emoji utility
-bindsym $mod+Shift+l exec --no-startup-id i3lock --color "#232323" && sleep 2 && xset dpms force off
+bindsym $mod+Shift+l exec --no-startup-id i3lock -n --color "#232323" & bash -c 'sleep 0.5 && xset dpms force off'
 
 # change focus between tiling / floating windows
 # bindsym $mod+space focus mode_toggle
@@ -154,8 +154,8 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-msg exit"
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
